--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
 <html>
-    
+  <head>
+    <title></title>
+    <link rel="stylesheet" href="" />
+  </head>
+  <body></body>
 </html>
