--- a/index.html
+++ b/index.html
@@ -1,11 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bootstrap</title>
-</head>
-<body>
+    <link rel="stylesheet" href="css/style.css">
+  </head>
+  <body>
+    <nav>
+      <img src="/image/skillku-logo-light.png" alt="Logo skillku" />
+      <ul>
+        <li><a href="">Beranda</a></li>
+        <li><a href="">Tentang Kami</a></li>
+        <li><a href="">Visi Misi</a></li>
+        <li><a href="">Contact</a></li>
+      </ul>
+    </nav>
 
-</body>
+    <header>
+      <div class="banner-container">
+        <div class="text-banner">
+            <h1>Ini Website Pertamaku</h1>
+            <p>Belajar bersama di Skillku untuk membuat website</p>
+            <button>Hubungi Saya</button>
+        </div>
+      </div>
+    </header>
+
+    <main>
+      <section>
+        <img src="" alt="" />
+        <article>
+          <h1>Tentang Kami</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam
+            quisquam odio mollitia quas ad. Vero reprehenderit repellendus,
+            eveniet recusandae fugiat eius quo temporibus assumenda quos esse
+            quam voluptatibus repellat natus corporis? Cumque obcaecati rem
+            nisi.
+          </p>
+        </article>
+      </section>
+    </main>
+
+    <footer>
+        <p>Copyright Skillku.com</p>
+    </footer>
+
+  </body>
 </html>
