--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bootstrap</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <nav>
@@ -20,17 +20,18 @@
     <header>
       <div class="banner-container">
         <div class="text-banner">
-            <h1>Ini Website Pertamaku</h1>
-            <p>Belajar bersama di Skillku untuk membuat website</p>
-            <button>Hubungi Saya</button>
+          <h1>Ini Website Pertamaku</h1>
+          <p>Belajar bersama di Skillku untuk membuat website</p>
+          <button>Hubungi Saya</button>
         </div>
       </div>
     </header>
 
     <main>
-      <section>
-        <img src="" alt="" />
+      <section class="tentang-kami">
+        <img src="/image/aboutus.png" alt="" />
         <article>
+          <span>lebih mengenal kami</span>
           <h1>Tentang Kami</h1>
           <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam
@@ -44,8 +45,7 @@
     </main>
 
     <footer>
-        <p>Copyright Skillku.com</p>
+      <p>Copyright Skillku.com</p>
     </footer>
-
   </body>
 </html>
