--- a/index.html
+++ b/index.html
@@ -5,19 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bootstrap</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <nav>
       <img src="/image/skillku-logo-light.png" alt="Logo skillku" />
       <ul>
-        <li><a href="">Beranda</a></li>
-        <li><a href="">Tentang Kami</a></li>
-        <li><a href="">Visi Misi</a></li>
-        <li><a href="">Contact</a></li>
+        <li><a href="#beranda">Beranda</a></li>
+        <li><a href="#tentang-kami">Tentang Kami</a></li>
+        <li><a href="#visi-misi">Visi Misi</a></li>
+        <li><a href="#nilai">Nilai</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
 
-    <header>
+    <header id="beranda">
       <div class="banner-container">
         <div class="text-banner">
           <h1>Ini Website Pertamaku</h1>
@@ -28,7 +35,7 @@
     </header>
 
     <main>
-      <section class="tentang-kami">
+      <section class="tentang-kami" id="tentang-kami">
         <img src="/image/aboutus.png" alt="" />
         <article>
           <span>lebih mengenal kami</span>
@@ -42,10 +49,166 @@
           </p>
         </article>
       </section>
+
+      <section class="visi-misi d-flex align-items-center" id="visi-misi">
+        <div class="container">
+          <div class="row">
+            <div class="col-6">
+              <span class="text-uppercase fw-bold fs-5"
+                >Kami adalah yang terbaik</span
+              >
+              <h1 class="fw-bold pt-3">VIsi misi</h1>
+              <div class="d-flex">
+                <img src="/icons/vision.svg" class="icon" alt="icon-visi" />
+                <div class="pt-2 ps-4">
+                  <h2 class="fs-4 fw-bold">Visi</h2>
+                  <ul>
+                    <li>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Exercitationem totam voluptatem excepturi necessitatibus a
+                      id facilis doloremque sed, nam voluptatibus blanditiis cum
+                      laboriosam! Fugiat, odio.
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <div class="d-flex pt-4">
+                <img src="/icons/mission.svg" class="icon" alt="icon-mission" />
+                <div class="pt-2 ps-4">
+                  <h2 class="fs-4 fw-bold">Misi</h2>
+                  <ul>
+                    <li>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Suscipit maxime est enim placeat sit minus.
+                    </li>
+                    <li>
+                      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                      Fugiat deleniti ea reiciendis corporis porro laboriosam!
+                    </li>
+                    <li>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Porro labore, accusamus explicabo delectus eos nam!
+                    </li>
+                    <li>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Voluptatibus laborum officia, temporibus quidem neque
+                      eius!
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col-5 d-flex align-items-center justify-content-center">
+              <img src="/image/skillku-logo-dark.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="nilai d-flex align-items-center" id="nilai">
+        <div class="container">
+          <div class="heading-nilai">
+            <span class="text-uppercase fw-bold fs-5"
+              >Kami adalah yang Terbaik</span
+            >
+            <h1 class="fw-bold py-3">Nilai Kami</h1>
+            <p class="fs-5">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Consequatur nihil ducimus odit illum dolores corporis perspiciatis
+              facere sed, voluptatibus repudiandae.
+            </p>
+          </div>
+          <div class="d-flex justify-content-between py-5">
+            <div class="card p-4">
+              <img
+                src="/icons/running-white.svg"
+                alt="icon-running"
+                class="running img-fluid mx-auto py-4"
+              />
+              <div class="text-center">
+                <h2 class="fw-bold fs-4">Resposive</h2>
+                <p class="p-4 fs-5">Lorem ipsum dolor, sit amet consectetur</p>
+              </div>
+            </div>
+            <div class="card p-4">
+              <img src="/icons/hands-white.svg" alt="icon-hands class="hands
+              img-fluid mx-auto py-4">
+              <div class="text-center">
+                <h2 class="fw-bold fs-4">Berkomitmen</h2>
+                <p class="p-4 fs-5">
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Nisi, ratione.
+                </p>
+              </div>
+            </div>
+            <div class="card p-4">
+              <img src="/icons/circle-white.svg" alt="icon-circle class="circle
+              img-fluid mx-auto py-4">
+              <div class="text-center">
+                <h2 class="fw-bold fs-4">Terpercaya</h2>
+                <p class="p-4 fs-5">
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Nisi, ratione.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="contact" id="contact">
+        <div class="d-flex py-5 align-content-center justify-content-center">
+          <article class="d-flex flex-column align-items-center">
+            <h1 class="fw-bold">Hubungi Kami</h1>
+            <div class="d-flex justify-content-center py-2">
+              <p>xxxxx@</p>
+            </div>
+            <button class="btn btn-primary px-4">Kirim</button>
+          </article>
+        </div>
+      </section>
     </main>
 
     <footer>
-      <p>Copyright Skillku.com</p>
+      <div class="w-100 d-flex justify-content-around align-items-sm-start py-5">
+        <div class="d-flex flex-column">
+          <img
+            src="/image/skillku-logo-light.png"
+            width="100"
+            alt="logo light skillku"
+          />
+          <span class="py-3 ps-1 fs-6 fw-bold">Skillku.com</span>
+        </div>
+        <address>
+          <h2 class="fw-bold fs-4">Information</h2>
+          <hr />
+          <ul class="list-unstyled py-2">
+            <li>
+              <img src="/icons/phone.svg" alt="" />
+              <span class="ps-2">+62 98829898</span>
+            </li>
+          </ul>
+        </address>
+        <div class="menu-footer" role="navigation">
+          <h2 class="fw-bold fs-4">Top Links</h2>
+          <hr />
+          <ul class="list-unstyled py-2">
+            <li><a href="">Beranda</a></li>
+            <li><a href="">Tentang Kami</a></li>
+            <li><a href="">Visi Misi</a></li>
+            <li><a href="">Contact</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="copyright">
+        <p class="py-2 mb-0">copyright skillku.com</p>
+      </div>
     </footer>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
